[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the ENC28J60 (Ethernet controller)"
documentation = "https://docs.rs/enc28j60"
edition = "2018"
keywords = ["embedded-hal-driver", "Ethernet", "SPI"]
license = "MIT OR Apache-2.0"
name = "enc28j60"
readme = "README.md"
repository = "https://github.com/japaric/enc28j60"
version = "0.3.1"

[dependencies]
as-slice = "0.2.1"

[dependencies.cast]
default-features = false
version = "0.3.0"

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]

[dependencies.byteorder]
default-features = false
version = "1.4.3"

[dependencies.owning-slice]
git = "https://github.com/japaric/owning-slice"

[dependencies.smoltcp]
git = "https://github.com/smoltcp-rs/smoltcp"
version = "0.9.1"
features = ["proto-ipv4", "socket-tcp", "medium-ethernet"]
default-features = false
optional = true

[dev-dependencies]
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
panic-semihosting = "0.6.0"
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", features = ["stm32f103", "rt"] }

# doesn't match new API
# [[example]]
# name = "smoltcp"
# required-features = ["smoltcp"]

[profile.dev]
opt-level = "s"
